--- a/resume.html
+++ b/resume.html
@@ -291,5 +291,8 @@
         </li>
       </ul>
     </div>
+    <div align="center">
+      <p>With clickable links: <a href="#">https://shubham-00.github.io/resume/</a></p>
+    </div>
   </body>
 </html>
